src/test/ui/simd/issue-39720.stderr
error[E0075]: SIMD vector length must be a power of two
  --> $DIR/issue-39720.rs:7:1
   |
LL | pub struct Char3(pub i8, pub i8, pub i8);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0075]: SIMD vector length must be a power of two
  --> $DIR/issue-39720.rs:12:1
   |
LL | pub struct Short3(pub i16, pub i16, pub i16);
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0075`.
